--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,10 @@ dependencies {
     compile "org.springframework:spring-web:$SPRING_VERSION"
     compile "com.jayway.jsonpath:json-path:$JSONPATH_VERSION"
     compile "org.jsoup:jsoup:$JSOUP_VERSION"
-    compile "org.pegdown:pegdown:1.6.0"
+    compile "org.pegdown:pegdown:$PEGDOWN_VERSION"
 
-    compile "org.apache.logging.log4j:log4j-core:$LOG4J2_VERSION"
-    compile "org.apache.logging.log4j:log4j-slf4j-impl:$LOG4J2_VERSION"
+    testCompile "org.apache.logging.log4j:log4j-core:$LOG4J2_VERSION"
+    testCompile "org.apache.logging.log4j:log4j-slf4j-impl:$LOG4J2_VERSION"
 
     testCompile "junit:junit:$JUNIT_VERSION"
     testCompile "org.mockito:mockito-core:$MOCKITO_VERSION"
