--- a/src/test/resources/build.gradle.sample
+++ b/src/test/resources/build.gradle.sample
@@ -12,10 +12,10 @@ apply plugin: 'com.github.qwazer.markdown-confluence'
 
 confluence {
     ancestorId 95791817
-    authentication 'base64-encoded user:pass'
-    confluenceRestApiUrl 'https://confluence.acme.com/rest/api/'
+    authentication 'admin:admin'.bytes.encodeBase64().toString()
+    confluenceRestApiUrl 'http://localhost:8090/rest/api/'
     spaceKey 'SAMPLE'
     title 'projectName'
-    baseDir = ''
+    baseFile = file('README.md')
     sslTrustAll true
 }
