--- a/src/main/resources/META-INF/gradle-plugins/com.github.qwazer.markdown-confluence.properties
+++ b/src/main/resources/META-INF/gradle-plugins/com.github.qwazer.markdown-confluence.properties
@@ -1,1 +1,1 @@
-implementation-class=com.github.qwazer.gradle.plugin.ConfluenceGradlePlugin
+implementation-class=com.github.qwazer.markdown.confluence.gradle.plugin.ConfluenceGradlePlugin
