--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,9 @@ publishing {
     publications {
         MyPublication(MavenPublication) {
             from components.java
+            groupId 'com.github.qwazer'
+            artifactId project.name
+            version project.version
         }
     }
 }
