first preview release is available on jcenter

--- a/src/test/resources/gradle_builds/prev_release_availability.gradle
+++ b/src/test/resources/gradle_builds/prev_release_availability.gradle
@@ -1,8 +1,8 @@
 buildscript {
     repositories {
-        maven {
-            url "http://dl.bintray.com/qwazer/maven"
-        }
+//        maven {
+//            url "http://dl.bintray.com/qwazer/maven"
+//        }
         jcenter()
     }
     dependencies {
