--- a/src/test/resources/gradle_builds/prev_release_availability.gradle
+++ b/src/test/resources/gradle_builds/prev_release_availability.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.github.qwazer:markdown-confluence-gradle-plugin:0.2-EAP01'
+        classpath 'com.github.qwazer:markdown-confluence-gradle-plugin:0.2-RC01'
     }
 }
 
