markdown-confluence-gradle-plugin-2 add support for replace parameters

--- a/src/test/resources/gradle_builds/sample_build.gradle
+++ b/src/test/resources/gradle_builds/sample_build.gradle
@@ -18,4 +18,5 @@ confluence {
     title 'projectName'
     baseFile = file('README.md')
     sslTrustAll true
+    pageVariables = ['project.name': project.name]
 }
