--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: java
 jdk:
   - oraclejdk8
   - oraclejdk7
-  - openjdk6
+  - openjdk7
 
 install: echo "skip 'gradle assemble' step"
 script:
-   - ./gradlew classes
+   - ./gradlew build
