--- a/src/test/resources/gradle_builds/prev_release_availability.gradle
+++ b/src/test/resources/gradle_builds/prev_release_availability.gradle
@@ -13,11 +13,17 @@ buildscript {
 apply plugin: 'com.github.qwazer.markdown-confluence'
 
 confluence {
-    parentPage 'Home'
+
     authentication 'admin:admin'.bytes.encodeBase64().toString()
     confluenceRestApiUrl 'https://acme.com:8090/rest/api/'
     spaceKey 'SAMPLE'
-    title 'projectName'
-    baseFile = file('README.md')
     sslTrustAll true
+
+    pages {
+        page {
+            parentPage 'Home'
+            title 'projectName'
+            baseFile = file('README.md')
+        }
+    }
 }
