--- a/src/test/resources/gradle_builds/sample_build.gradle
+++ b/src/test/resources/gradle_builds/sample_build.gradle
@@ -11,12 +11,22 @@ buildscript {
 apply plugin: 'com.github.qwazer.markdown-confluence'
 
 confluence {
-    parentPage 'Home'
     authentication 'admin:admin'.bytes.encodeBase64().toString()
     confluenceRestApiUrl 'http://localhost:8090/rest/api/'
     spaceKey 'SAMPLE'
-    title 'projectName'
-    baseFile = file('README.md')
     sslTrustAll true
     pageVariables = ['project.name': project.name]
+
+    pages {
+        page {
+            parentPage = 'Home'
+            title = 'projectName'
+            baseFile = file('README.md')
+        }
+        page {
+            parentPage  'projectName'
+            title "projectName2-${project.version}"
+            baseFile  file('README.md')
+        }
+    }
 }
