--- a/src/test/resources/gradle_builds/sample_build.gradle
+++ b/src/test/resources/gradle_builds/sample_build.gradle
@@ -12,21 +12,21 @@ apply plugin: 'com.github.qwazer.markdown-confluence'
 
 confluence {
     authentication 'admin:admin'.bytes.encodeBase64().toString()
-    confluenceRestApiUrl 'http://localhost:8090/rest/api/'
+    restApiUrl 'http://localhost:8090/rest/api/'
     spaceKey 'SAMPLE'
     sslTrustAll true
     pageVariables = ['project.name': project.name]
 
     pages {
         page {
-            parentPage  'projectName'
+            parentTitle  'projectName'
             title "projectName-${project.version}"
-            baseFile  file('README.md')
+            srcFile  file('README.md')
         }
         page {
-            parentPage = 'Home'
+            parentTitle = 'Home'
             title = 'projectName'
-            baseFile = file('README.md')
+            srcFile = file('README.md')
         }
     }
 }
