markdown-confluence-gradle-plugin-4 add support for page labels
model changes

--- a/src/test/resources/gradle_builds/sample_build.gradle
+++ b/src/test/resources/gradle_builds/sample_build.gradle
@@ -22,6 +22,7 @@ confluence {
             parentTitle  'projectName'
             title "projectName-${project.version}"
             srcFile  file('README.md')
+            labels = 'release-notes'
         }
         page {
             parentTitle = 'Home'
