--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ jdk:
 install: echo "skip 'gradle assemble' step"
 script:
    - ./gradlew build
+
+deploy:
+  provider: script
+  script: ./gradlew bintrayUpload
+  skip_cleanup: true
+  on:
+    branch: master
+    tags: true
+    # deploy only with oraclejdk7
+    condition: $JAVA_HOME = /usr/lib/jvm/java-8-oracle
+
+
