fix .travis.yml && version up

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
     branch: master
     tags: true
     # deploy only with oraclejdk7
-    condition: JAVA_HOME = /usr/lib/jvm/java-7-oracle
+    condition: $JAVA_HOME = /usr/lib/jvm/java-7-oracle
 
 
