--- a/build.gradle
+++ b/build.gradle
@@ -45,11 +45,16 @@ dependencies {
 
     testImplementation gradleTestKit()
     testImplementation "commons-io:commons-io:2.6"
-    testImplementation "junit:junit:4.12"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.9.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.9.2"
+    testImplementation "org.hamcrest:hamcrest:2.2"
     testImplementation "org.mockito:mockito-core:2.18.0"
     testImplementation "org.springframework:spring-test:$SPRING_VERSION"
 }
 
+test {
+    useJUnitPlatform()
+}
 
 bintray {
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
