--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,8 @@ dependencies {
 
     testImplementation gradleTestKit()
     testImplementation "commons-io:commons-io:2.6"
-    testImplementation "org.junit.jupiter:junit-jupiter:5.9.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.9.2"
+    testImplementation "org.junit.jupiter:junit-jupiter:$JUNIT_VERSION"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$JUNIT_VERSION"
     testImplementation "org.hamcrest:hamcrest:2.2"
     testImplementation "org.mockito:mockito-core:2.18.0"
     testImplementation "org.springframework:spring-test:$SPRING_VERSION"
