Added support for authenticating Confluence API calls with Personal Access Tokens (PATs).

--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,17 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.gradle.plugin-publish'
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
+    }
+    compileJava.options.encoding = "UTF-8"
+    compileTestJava.options.encoding = "UTF-8"
+}
 
 dependencies {
     implementation gradleApi()
