--- a/src/test/resources/gradle_builds/sample_build.gradle
+++ b/src/test/resources/gradle_builds/sample_build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
-        mavenLocal()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.github.qwazer:markdown-confluence-gradle-plugin:$VERSION'
@@ -13,7 +13,7 @@ apply plugin: 'com.github.qwazer.markdown-confluence'
 confluence {
     authentication 'admin:admin'.bytes.encodeBase64().toString()
     restApiUrl 'http://localhost:8090/rest/api/'
-    spaceKey 'SAMPLE'
+    spaceKey 'ds'
     sslTrustAll true
     pageVariables = ['project.name': project.name]
 
@@ -25,7 +25,7 @@ confluence {
             labels = ['release-notes', "${project.name}-release-notes" ]
         }
         page {
-            parentTitle = 'Home'
+            parentTitle = 'Welcome to Confluence'
             title = 'projectName'
             srcFile = file('README.md')
         }
