--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ repositories {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(8))
+        languageVersion.set(JavaLanguageVersion.of(17))
     }
     compileJava.options.encoding = "UTF-8"
     compileTestJava.options.encoding = "UTF-8"
@@ -40,9 +40,9 @@ dependencies {
     implementation "org.springframework:spring-core:$SPRING_VERSION"
     implementation "org.springframework:spring-context:$SPRING_VERSION"
     implementation "org.springframework:spring-web:$SPRING_VERSION"
-    implementation "com.jayway.jsonpath:json-path:2.4.0"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.12.3"
-    implementation "org.jsoup:jsoup:1.11.2"
+//    implementation "com.jayway.jsonpath:json-path:2.8.0"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.15.2"
+    implementation "org.jsoup:jsoup:1.15.3"
     implementation "org.pegdown:pegdown:1.6.0"
 
 
