--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(8))
+//        languageVersion.set(JavaLanguageVersion.of(8))
     }
     compileJava.options.encoding = 'UTF-8'
     compileTestJava.options.encoding = 'UTF-8'
@@ -24,7 +24,7 @@ dependencies {
     implementation gradleApi()
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
-    implementation 'org.pegdown:pegdown:1.6.0'
+    implementation 'org.bsc.maven:confluence-markdown-processor-commonmark:7.13'
 }
 
 gradlePlugin {
