--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'groovy'
     id 'java-gradle-plugin'
     id 'jvm-test-suite'
     id 'com.gradle.plugin-publish' version '1.2.0'
@@ -21,11 +22,39 @@ java {
 }
 
 dependencies {
-    implementation gradleApi()
-    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
-    implementation 'commons-codec:commons-codec:1.16.0'
-    implementation 'org.bsc.maven:confluence-markdown-processor-commonmark:7.13'
+    api 'com.squareup.okhttp3:okhttp:4.12.0'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    api 'commons-codec:commons-codec:1.16.0'
+    api 'org.bsc.maven:confluence-markdown-processor-commonmark:7.13'
+    api 'org.bsc.maven:confluence-markdown-processor-pegdown:6.20'
+}
+
+testing {
+    suites {
+        withType(JvmTestSuite).matching { it.name in ['test', 'integrationTest'] }.configureEach {
+            useJUnit()
+            dependencies {
+                implementation 'org.mockito:mockito-core:4.11.0'
+                implementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
+            }
+        }
+
+        integrationTest(JvmTestSuite) {
+            testType = TestSuiteType.INTEGRATION_TEST
+            dependencies {
+                implementation project()
+            }
+        }
+
+        functionalTest(JvmTestSuite) {
+            testType = TestSuiteType.FUNCTIONAL_TEST
+            useSpock()
+            dependencies {
+                implementation gradleTestKit()
+                implementation project()
+            }
+        }
+    }
 }
 
 gradlePlugin {
@@ -40,25 +69,5 @@ gradlePlugin {
             tags.set(['markdown', 'confluence'])
         }
     }
-}
-
-testing {
-    suites {
-        configureEach {
-            useJUnit()
-            dependencies {
-                implementation gradleTestKit()
-                implementation 'junit:junit:4.13.2'
-                implementation 'org.mockito:mockito-core:4.11.0'
-                implementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
-            }
-        }
-
-        integrationTest(JvmTestSuite) {
-            testType = TestSuiteType.INTEGRATION_TEST
-            dependencies {
-                implementation(project())
-            }
-        }
-    }
+    testSourceSets(testing.suites.functionalTest.sources)
 }
